# JadeWM

./: Cargo.toml  README.md
src/: main.rs  state.rs  winit.rs
src/handlers/: compositor.rs  xdg_shell.rs
ui/: decorations.html
