[package]
name = "JadeWM"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.2.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
default-features = false
features = [
	"backend_winit",
	"wayland_frontend",
	"desktop",
]
